Marked Random Capitals That Appear Exalted.

--- a/background.tex
+++ b/background.tex
@@ -24,12 +24,15 @@ more accurate that a language exhibits a set of characteristics from a
 number of paradigms.
 The broader the scope of a language, the broader is the versatility in solving problems.
 
-Programming Languages that fall into the same family, in our case declarative programming languages, can be of
+Programming Languages\endnote{%
+  \david{What style guide are you using to determine capitalization?}\newline
+  \mehul{none at the moment but I will change certain capitals to small}
+}\elabel{caps-choices} that fall into the same family, in our case declarative programming languages, can be of
 different paradigms and can have very contrasting, conflicting characteristics and behaviours.
-The two most important ones in the family of declarative languages are the Functional and Logical style of
+The two most important ones in the family of declarative languages are the Functional\eref{caps-choices} and Logical\eref{caps-choices} style of
 programming.
 
-Functional Programming, \cite{hughes1989functional} gets its name as the fundamental concept is to apply
+Functional Programming\eref{caps-choices}, \cite{hughes1989functional} gets its name as the fundamental concept is to apply
 mathematical functions to arguments to get results.
 A program itself consists of functions and functions only which when applied to arguments produce results without
 changing the state that is values on variables and so on.
@@ -77,7 +80,7 @@ variables, lastly unifying all of the constraints giving the type of the result.
   }
 }
 
-Logic Programming, \cite{spivey1995introduction} on the other hand is based on formal logic.
+Logic Programming\eref{caps-choices}, \cite{spivey1995introduction} on the other hand is based on formal logic.
 A program is a set of rules and formul\ae{} in symbolic logic that are used to derive new formulas from the old
 ones.
 This is done until the one which gives the solution is not derived.
@@ -153,7 +156,7 @@ Here\endnote{%
 }
 we look at a few.
 Over time there has been an approach that branches out, which is paradigm integration.
-A lot of work has been done on Unifying the Theories of Programming
+A lot of work has been done on Unifying the Theories\eref{caps-choices} of Programming\eref{caps-choices}
 \cite{DBLP:conf/utp/2006,DBLP:conf/utp/2008,DBLP:conf/utp/2010,DBLP:conf/utp/2012,hoare1998unifying,
   gibbons2013unifying}.
 Hybrid languages that have characteristics from more than one paradigm are coming into the
@@ -253,7 +256,7 @@ The same in \progLang{Haskell},\endnote{%
 %\end{minted}  
 \inputminted[linenos]{haskell}{append.pl}
 
-Consider the Object Functional Programming Language, \progLang{Scala}
+Consider the Object Functional Programming Language\eref{caps-choices}, \progLang{Scala}
 \cite{website:scala}.\endnote{%
   Should this example be moved up to where you are discussing multi-paradigm languages?
   Wrote something about \progLang{Scala} up there.
