--- a/embedding.tex
+++ b/embedding.tex
@@ -86,7 +86,7 @@ The purely declarative nature lacks basic requirements such as support for \lang
   declarative; or \dots?
 }
 The other issue is the ongoing comparison between the siblings \cite{website:haskell-choice} of the same family, the
-family of Declarative Languages.\endnote{%
+family of Declarative Languages.\eref{caps-choices}\textsuperscript{,}\endnote{%
   \david{What does this sentence mean?
   Are you suggesting that one of \progLang{Prolog}'s problems is that it is
   competing with \progLang{Haskell}?
@@ -212,7 +212,7 @@ foreign function interface so it is ``\progLang{Prolog} in \progLang{Haskell}'' 
 \cite{prolog-lib} which is the only implementation that comes the closest to something like an actual practical
 \progLang{Prolog}.
 But all they give is a small interpreter, none or a few practical features, incomplete support for lists, minor or
-no \haskellConstruct{monadic} support and an REPL without the ability to ``write a \progLang{Prolog} Program File''.
+no \haskellConstruct{monadic} support and an REPL without the ability to ``write a \progLang{Prolog} Program File''.\eref{caps-choices}
 
 %\item[$\bullet$]Logic Libraries
 \subsection{Logic Libraries}
