--- a/pwp.tex
+++ b/pwp.tex
@@ -22,12 +22,12 @@ This chapter discusses the properties of the target language \progLang{Prolog} a
 language to extend its capabilities.
 
 \begin{enumerate}
-\item Why a Logic Programming Language ?
+\item Why a Logic Programming Languagee\eref{caps-choices} ?
 
 \item \progLang{Prolog} as a logic programming language.
 
 \progLang{Prolog} is a general purpose logic programming language mainly used in artificial intelligence and computational linguistics.  
-It is a Declarative language i.e. a program is a set of facts an rules running a query on which will return a result. The relation
+It is a Declarative\eref{caps-choices} language i.e. a program is a set of facts an rules running a query on which will return a result. The relation
 between them is defined by clauses using \textit{Horn Clauses}\cite{wikiprolog}. \progLang{Prolog} is very popular and has a number of 
 implementations \cite{website:comparisonofprologimplementationswiki} for different purposes. 
 
