--- a/introduction.tex
+++ b/introduction.tex
@@ -28,10 +28,7 @@ problems are being tackled using the power of programming technologies.
 A programming language must not only provide an easy to use environment but also adaptability towards the problem domain.
 
 Over the last decade the declarative style of programming has gained popularity.
-The methodologies that have stood out are the functional and logical approaches.\endnote{%
-  \david{What style guide are you using to determine capitalization?}\newline
-  \mehul{none at the moment but I will change certain capitals to small}
-}
+The methodologies that have stood out are the functional and logical approaches.
 The former is based on functions and lambda calculus, while the latter is based on Horn clause logic.
 Each of them has its own advantages and flaws.
 How does one choose which approach to adopt?
