Marked Random Capitals That Appear Exalted.

--- a/proto1.tex
+++ b/proto1.tex
@@ -262,9 +262,7 @@ We convert it into a non recursive\endnote{%
 data type.
 
 
-Basically we do Unification\endnote{%
-  Why is unification capitalized?
-}
+Basically we do Unification\eref{caps-choices}
 monadically.
 
 
@@ -573,15 +571,15 @@ with it.\endnote{%
 
 In this section we discuss
 \begin{enumerate}
-\item Functor Hierarchy.
+\item Functor Hierarchy.\eref{caps-choices}
 
 \item Required instances the language must have.
 
 \item Mutable variables.
 
-\item Variable Bindings.
+\item Variable Bindings.\eref{caps-choices}
 
-\item Monadic Unification.
+\item Monadic Unification.\eref{caps-choices}
 
 \item Replicating \progLang{Prolog} unification in \progLang{Haskell}
 \end{enumerate}
