--- a/embedding.tex
+++ b/embedding.tex
@@ -206,7 +206,10 @@ capabilities \progLang{Haskell} seems to be already in the race\endnote{%
   Yet another metaphor whose meaning I do not understand in context.
 }
 with a host of related libraries.
-First we begin with the libraries about Prolog itself, a few exist \cite{nanoprolog-lib} being a preliminary or
+First we begin with the libraries about Prolog\endnote{%
+  Naked Prolog.
+}
+itself, a few exist \cite{nanoprolog-lib} being a preliminary or
 ``mini \progLang{Prolog}'' as such with not much in it to be able to be useful, \cite{hswip-lib} is all powerful but is an
 foreign function interface so it is ``\progLang{Prolog} in \progLang{Haskell}'' but we need \progLang{Prolog} for it,
 \cite{prolog-lib} which is the only implementation that comes the closest to something like an actual practical
