Marked some programming languages that were missing \progLang .

--- a/introduction.tex
+++ b/introduction.tex
@@ -109,7 +109,10 @@ Practical features for real world problems were added in an ad hoc way resulting
 nature.
 Some say that \progLang{Prolog} is fading away, \cite{website:prolog-steam,website:prolog-death,website:prolog-killer}.
 It is apparently not used for building large programs \cite{wikiprolog,somogyi1995logic,website:prolog1000db}.
-However there are a lot of good things about Prolog: it is ideal for search problems; it has a simple syntax, and a
+However there are a lot of good things about Prolog\endnote{%
+  naked \progLang{Prolog}.
+}
+: it is ideal for search problems; it has a simple syntax, and a
 strong underlying theory.
 It is a language that should not die away.
 
