--- a/thesis-solanki.tex
+++ b/thesis-solanki.tex
@@ -79,6 +79,7 @@
 \newcommand\secondOfTwo[2]{#2}
 \newcommand{\enparen}[1]{\textup{\firstOfTwo()}#1\textup{\secondOfTwo()}}
 \newcommand{\macroName}[1]{\texttt{\char`\\#1}}
+\newcommand{\macroArg}[1]{\texttt{\char`\{#1\char`\}}}
 \newcommand{\prologConstruct}[1]{\textcolor{brown}{\texttt{#1}}}
 \newcommand{\haskellConstruct}[1]{\textcolor{magenta}{\texttt{#1}}}
 \newcommand{\languageConstruct}[1]{\textcolor{orange}{\texttt{#1}}}
