--- a/proto4.tex
+++ b/proto4.tex
@@ -40,43 +40,52 @@ These data structures can later be executed, and they cause effects to occur - b
 never with effects.
 
 Let’s look at a simplified form of I/O, where we only care about reading from stdin, writing to stdout and returning a value. We can model 
-this with the IOAction data type.
+this with the \markWord{IOAction} data type.
 
-That is, an IOAction is one of the following three things:
+That is, an \markWord{IOAction} is one of the following three things:
 \begin{enumerate}
-\item A container for a value of type a,
+\item A container for a value of type \markWord{a},
 
-\item A container holding a String to be printed to stdout, followed by another IOAction a, or
+\item A container holding a \markWord{String} to be printed to \markWord{stdout},
+  followed by another \markWord{IOAction a}, or
 
-\item A container holding a function from String -> IOAction a, which can be applied to whatever String is read from stdin.
+\item A container holding a function from \markWord{String} \Verb!->! \markWord{IOAction a}, which can be applied
+  to whatever \markWord{String} is read from \markWord{stdin}. 
 \end{enumerate}
 
-Notice that the only terminal constructor is Return – that means that any IOAction must be a combination of Get and Put constructors, 
-finally ending in a Return.
+Notice that the only terminal constructor is \markWord{Return} –\endnote{%
+  The preceding character is not an \textsc{ascii} character!
+}
+that means that any \markWord{IOAction} must be a combination of \markWord{Get} and \markWord{Put} constructors, 
+finally ending in a \markWord{Return}.
 
-Some simple actions include the one that prints to stdout before returning ():
+Some simple actions include the one that prints to \markWord{stdout} before returning \Verb!()!:
 
 \mint{haskell}|put s = Put s (Return ())|
 
-and the action that reads from stdin and returns the string unchanged:
+and the action that reads from \markWord{stdin} and returns the string unchanged:
 
 \mint{haskell}|get = Get (\s -> Return s)|
 
-To build up a language for doing I/O we need to be able to combine and sequence actions. We want the ability to perform an IOAction a 
-followed by an IOAction b, and return some result.
+To build up a language for doing I/O we need to be able to combine and sequence actions. We want the ability to perform an \markWord{IOAction} \markWord{a} 
+followed by an \markWord{IOAction} \markWord{b}, and return some result.
 
-In fact, we could have the second IOAction depend on the return value of the first one - that is, we need a sequencing combinator of the 
+In fact, we could have the second \markWord{IOAction} depend on the return value of the first one -\endnote{%
+  The preceding punctuation mark is incorrect.
+}
+that is, we need a sequencing combinator of the 
 following type:
 
 \mint{haskell}|seqio :: IOAction a -> (a -> IOAction b) -> IOAction b|
 
-We want to take the IOAction a supplied in the first argument, get its return value (which is of type a) and feed that to the function in 
-the second argument, getting an IOAction b out, which can be sequenced with the first IOAction a.
+We want to take the \markWord{IOAction} \markWord{a} supplied in the first argument, get its return value (which is of type \markWord{a}) and feed that to the function in 
+the second argument, getting an \markWord{IOAction} \markWord{b} out, which can be sequenced with the first \markWord{IOAction} \markWord{a}.
 
-That’s a bit of a mouthful, but writing this combinator isn’t too hard. When we reach the final Return, we apply the function f to get a 
+That’s a bit of a mouthful, but writing this combinator isn’t too hard. When we reach the final \markWord{Return}, we apply the function \markWord{f} to get a 
 new action. For the other constructors, we keep the form of the action the same, and just thread seqio through the seqio constructor.
 
-Using seqio we can define the action that gets input from stdin and immediately prints it to the screen:
+Using \markWord{seqio} we can define the action that gets input from \markWord{stdin} and immediately prints it to
+the screen: 
 
 %\mint{haskell}|echo = get $\backslash$ seqio $\backslash$ put|
 
@@ -118,8 +127,8 @@ Put "What is your name?" (
   )
 )
 \end{minted}
-It will surprise no one to learn that IOAction is a monad. In fact we’ve already defined the necessary bind operation in seqio, so getting 
-the Monad instance is trivial:
+It will surprise no one to learn that \markWord{IOAction} is a monad. In fact we’ve already defined the necessary bind operation in \markWord{seqio}, so getting 
+the \markWord{Monad} instance is trivial:
 \begin{minted}[linenos]{haskell}
 instance Monad IOAction where
     return = Return
@@ -140,9 +149,13 @@ hello2 = do put "What is your name?"
             put ("Hello, " ++ name ++ "!")
             put ("You are " ++ age ++ " years old!")
 \end{minted}
-Remember though, that this is still just defining a value of type IOAction () - no code is executed, and no effects occur! So far, this post is 100 \% pure.
+Remember though, that this is still just defining a value of type 
+\markWord{IOAction} \Verb!()! -\endnote{%
+  You want an em-dash, not a hyphen here.
+}
+no code is executed, and no effects occur! So far, this post is 100 \% pure.
 
-To see the effects, we need to define a function that takes an IOAction a and converts it into a value of type IO a, which can then be executed by the interpreter or the runtime system. It’s easy to write such a function just by turning it into the approprate calls to putStrLn and getLine.
+To see the effects, we need to define a function that takes an \markWord{IOAction} \markWord{a} and converts it into a value of type \markWord{IO} \markWord{a}, which can then be executed by the interpreter or the runtime system. It’s easy to write such a function just by turning it into the approprate calls to \markWord{putStrLn} and \markWord{getLine}.
 
 \begin{minted}[linenos]{haskell}
 run :: IOAction a -> IO a
@@ -151,7 +164,10 @@ run (Put s io) = putStrLn s >> run io
 run (Get g)    = getLine >>= \s -> run (g s)
 \end{minted}
 
-You can now load up GHCi and apply run to any action – a value of type IO a will be returned, and then immediately executed by the 
+You can now load up \markWord{GHCi} and apply run to any action –\endnote{%
+  The preceding character is not an \textsc{ascii} character!
+}
+a value of type \markWord{IO} \markWord{a} will be returned, and then immediately executed by the 
 interpreter:
 
 \begin{minted}[linenos]{haskell}
@@ -166,9 +182,22 @@ You are 29 years old
 \end{minted}
 Is there any practical use to this?
 
-Yes - an IOAction is a mini-language for doing I/O. In this mini language you are restricted to only reading from stdin and writing to stdout - there is no accessing files, spawning threads or network I/O.
+an \markWord{IOAction} is a mini-language for doing I/O. In this mini language you are restricted to only reading from \markWord{stdin} and writing to \markWord{stdout} -\endnote{%
+  The preceding punctuation mark should be an em-dash.
+}
+there is no accessing files, spawning threads or network I/O.
 
-In effect we have a “safe” domain-specific language. If a user of your program or library supplies a value of type IOAction a, you know that you are free to convert it to an IO a using run and execute it, and it will never do anything except reading from stdin and writing to stdout (not that those things aren’t potentially dangerous in themselves, but…)
+In effect we have a “\endnote{%
+  The preceding character is not an \textsc{ascii} character!
+}
+safe”\endnote{%
+  The preceding character is not an \textsc{ascii} character!
+} domain-specific language.
+If a user of your program or library supplies a value of type \markWord{IOAction} \markWord{a}, you know that you are free to convert it to an \markWord{IO} \markWord{a} using run and execute it, 
+and it will never do anything except reading from \markWord{stdin} and writing to \markWord{stdout} (not that those things aren’t potentially dangerous in themselves, but…\endnote{%
+  The preceding character is not an \textsc{ascii} character!
+  
+})
 
 
 \begin{singlespace}
