--- a/relatedWork.tex
+++ b/relatedWork.tex
@@ -46,23 +46,23 @@ The languages based on this approach are \progLang{ALF} \cite{website:alf}, \pro
 F-Algebras
 
 
-We are now ready to define F-algebras in the most general terms.
+We are now ready to define \markWord{F}-algebras in the most general terms.
 First I'll use the language of category theory and then quickly translate it to \progLang{Haskell}.
 
-An F-algebra consists of:
+An \markWord{F}-algebra consists of:
 \begin{enumerate}
-\item an endofunctor F in a category C,
-\item an object A in that category, and
-\item a morphism from F(A) to A.
+\item an endofunctor \markWord{F} in a category \markWord{C},
+\item an object \markWord{A} in that category, and
+\item a morphism from \markWord{F(A)} to \markWord{A}.
 \end{enumerate}
 
-An F-algebra in \progLang{Haskell} is defined by a functor f, a carrier type a, and a function from (f a) to a. (The underlying category is Hask.)
+An \markWord{F}-algebra in \progLang{Haskell} is defined by a functor \markWord{f}, a carrier type \markWord{a}, and a function from \markWord{(f a)} to \markWord{a}. (The underlying category is \markWord{Hask}.)
 
 Right about now the definition with which I started this post should start making sense:
 
 \mint{haskell}|type Algebra f a = f a -> a|
 
-For a given functor f and a carrier type a the algebra is defined by specifying just one function.
+For a given functor \markWord{f} and a carrier type \markWord{a} the algebra is defined by specifying just one function.
 Often this function itself is called the algebra, hence my use of the name alg in previous examples.
 
 
