Some endnotes removed.

--- a/proto2.1.tex
+++ b/proto2.1.tex
@@ -9,18 +9,12 @@
 \chapter{Prototype 2}{\label{proto2.1}}
 
 \section{About this chapter}
-This chapter attempts to infuse the generic methodology from
-Chapter~\ref{proto1}\endnote{%
-  Check the whole thesis for naked \macroName{ref}s.
-}
-in a current \progLang{Prolog} implementation \cite{prolog-lib}
-and make the unification ``monadic''.
+This chapter attempts to infuse the generic methodology from Chapter~\ref{proto1} in a current \progLang{Prolog}
+implementation \cite{prolog-lib} and make the unification ``monadic''.
 
 This chapter discusses the idea of implementing a basic working \progLang{Prolog} query resolver while using \cite{prolog-lib} as the base
 implementation. The language modifications and unification mechanism
-have been taken from Chapter~\ref{proto1}\endnote{%
-  Fix me!!
-}}
+have been taken from Chapter~\ref{proto1}
 and adapted to fit in with the other
 components such as the search strategy of the library.
 
@@ -61,7 +55,8 @@ be created by it. The above language suffers from most of the problems discussed
 \progLang{Prolog} ``terms'' which are of a ``single type''.
 
 
-The implementation consists of components that one would find in a language processing system (see Figure~\ref{fig:A language-processing system}).
+The implementation consists of components that one would find in a language processing system (see
+Figure~\ref{fig:A language-processing system}).
 
 \begin{figure}[th]
 \centering
