Some more comments on en- and em- dashes.

--- a/proto4.tex
+++ b/proto4.tex
@@ -182,6 +182,9 @@ You are 29 years old
 \end{minted}
 Is there any practical use to this?
 
+Yes -\endnote{%
+  The preceding punctuation mark should be an em-dash.
+}
 an \markWord{IOAction} is a mini-language for doing I/O. In this mini language you are restricted to only reading from \markWord{stdin} and writing to \markWord{stdout} -\endnote{%
   The preceding punctuation mark should be an em-dash.
 }
