--- a/workCompleted.tex
+++ b/workCompleted.tex
@@ -151,6 +151,8 @@ Keep on applying \mint{haskell}|ExprF|
 \item[Is there a better way]
 After infinitely many iterations we should get to a fix point where further iterations make no difference. It means that applying one more 
 \markWord{ExprF} would not change anything --\endnote{%
+  the preceding should be an em-dash, not an en-dash.
+}
 a fix point does not move under \markWord{ExprF}. It's like adding one to infinity: you get back infinity.   
 
 \item[How do that in \progLang{Haskell}]
