Added items to David’s toDo list.

--- a/toDo.tex
+++ b/toDo.tex
@@ -103,6 +103,15 @@
 \item Review Chapter 7
 \item Review Chapter 8
 \item Review Chapter 18
+\item ``\textit{IO}'' or ``\textit{I/O}''?  Check!
+\item Check spaces before opening parentheses.
+\item Search for variants on ``\textit{metasyntactic}'', such as
+  \begin{compactitem}
+  \item
+    ``\textit{meta syntactic}''
+  \item
+    ``\textit{meta-syntactic}''
+  \end{compactitem}
 
 \end{enumerate}
 
