Added remarks on \items that should be \sections or some such.

--- a/pwp.tex
+++ b/pwp.tex
@@ -36,7 +36,11 @@ implementations \cite{website:comparisonofprologimplementationswiki} for differe
 \begin{enumerate}
 
 
-\item Existing Implementations
+\item Existing Implementations\endnote{%
+  The surrounding \macroName{begin}\macroArg{enumerate} should be a
+  \texttt{description} environment, or a list of
+  \macroName{sub}\textsuperscript{\textasteriskcentered}\texttt{section}'s.
+}
 
 As a starting point a few publications and implementations helped in exploring the topic. The shortcomings were clearly visible to work and
 improve upon giving a starting point.
