--- a/workCompleted.tex
+++ b/workCompleted.tex
@@ -210,7 +210,9 @@ alg (x `Mul` y) = x * y
 \begin{minted}[linenos]{haskell}
  Fix f = f (Fix f)
 \end{minted}
-The Essence of Algebra
+\textcolor{blue}{The Essence of Algebra}\endnote{%
+  Is this supposed to be a \macroName{paragraph} or \macroName{subsection} or something?
+}
 There are two really essential aspects of an algebra:
 
 The ability to form expressions and
