--- a/toDo.tex
+++ b/toDo.tex
@@ -91,9 +91,8 @@
   In computer science, reflection is the ability of a computer program to examine (see type introspection) and modify its own structure and behavior (specifically the values, meta-data, properties and functions) at runtime.
   
 \item
-  Citation \Verb!logic-classes! is not defined (in
-  \Verb!./prologinhaskell.tex!). {\color{red}\textbf{Fixed!}}
-  David changed the citation to \Verb!logic-classes-lib!.
+  If a point is fixed by a function, it is a \textsl{fix\textbf{ed}
+    point}, not a \textit{fix point}.  Change throughout.
 
 \item [\textbf{David}]
 \item Clean up the non-exclusive license page in unbcthesis.cls
