Moved the \elabel for no-and .

--- a/hwh.tex
+++ b/hwh.tex
@@ -84,7 +84,9 @@ side effects which even \progLang{Prolog} is not able to do since the asserts an
 In \progLang{Haskell}, a monad defines a model for control flow and how side effects would propagate through a
 computation from step to step or modification to modification.
 And \progLang{Haskell} allows creation of custom monads relieving the burden of dealing with a fixed model of the
-host language.\eref{no-and}
+host language.\endnote{%
+    See \textit{p.}~\pageref{item:no-and}, item~\ref{item:no-and}.
+}\elabel{no-and}
 
 \item Lazy Evaluation
 \newline
