--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -176,9 +176,7 @@ Lastly, how would characteristics of hybrid languages fit into and play a role i
 
   To test it out we adopt the closed \progLang{Prolog}-like\eref{language-like} language defined in \cite{prolog-lib} and open it up.
   As for the unification part we use \cite{unification-fd-lib}, which provides a generic unification algorithm
-  implementation encapsulated into a monad.\endnote{%
-    See \textit{p.}~\pageref{item:no-and}, item~\ref{item:no-and}.
-}\elabel{no-and}
+  implementation encapsulated into a monad.
 
 \item
   (\chapterReference{proto2.1}{Prototype 2}) does the what a \progLang{Prolog} query resolver would do given a
