--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -33,11 +33,7 @@ discussed below, along with their shortcomings.
 
 \begin{enumerate}
 \item
-  Very few embedded implementations exist which offer a starting point for the task of embedding.\endnote{%
-    What is ``the job at hand''?
-    What is `` a perspective into the job at hand''?
-    See \textit{p.}~\pageref{sec:list-colloquialisms}.
-}
+  Very few embedded implementations exist which offer a starting point for the task of embedding.
   One of the earliest implementations \cite{website:mini-prolog-hugs98} is for an older specification of
   \progLang{Haskell} called \progLang{Haskell 98} \texttt{\bfseries{hugs}}.
   It is more of a proof of concept providing a mechanism to include variable search strategies in order to produce
@@ -62,9 +58,8 @@ discussed below, along with their shortcomings.
   Moreover, none of them are complete and most lack many practical parts of \progLang{Prolog}.
 
 \item
-  In the case of libraries, a few exist.\endnote{%
-    comma splice.
-}\elabel{comma-splice} Most are old and are not currently maintained or updated.
+  In the case of libraries, a few exist.
+  Most are old and are not currently maintained or updated.
   Many provide only a shell through which one has to
   do\eref{must-have-to} all the work, which is synonymous with the
   embeddings mentioned above.
@@ -75,10 +70,7 @@ discussed below, along with their shortcomings.
 }
 
 \item
-  Moreover, none of the above have natural list support that exists\endnote{%
-    ``exist'' or ``exists''?
-    \mehul{exists}
-}
+  Moreover, none of the above have natural list support that exists
   in \progLang{Prolog}.\endnote{%
     \david{What does this point mean?}
     \mehul{I would have to think; I do not remember.}
@@ -105,10 +97,7 @@ languages to work together.
 So, there is either a shallow approach that does not utilize the constructs available in the host language and
 results in a translation of the characteristics, or the other is a fairly complex process which results in
 tackling the conflicting nature of different programming paradigms and languages, resulting in a toned-down
-compromised language that takes advantages of neither paradigms.\endnote{%
-  I am uncertain as to the tone.
-  Words like ``very'', ``mere'', and so on seem overly argumentative.
-}
+compromised language that takes advantages of neither paradigms.
 Mostly, the trend is to build a library for extension to replicate the features as an add on.\endnote{%
   What is the point of this \P{} relative to the overall thesis?
   \mehul{too deep == too complex, too shallow == does not do much, mix == a little better I guess?}
@@ -174,7 +163,7 @@ Lastly, how would characteristics of hybrid languages fit into and play a role i
   the original type.
   One of the outcomes is a producing a polymorphically typed embedded language within \progLang{Haskell}{\Large.}
 
-  To test it out we adopt the closed \progLang{Prolog}-like\eref{language-like} language defined in \cite{prolog-lib} and open it up.
+  To test it out we adopt the closed \progLang{Prolog}-like language defined in \cite{prolog-lib} and open it up.
   As for the unification part we use \cite{unification-fd-lib}, which provides a generic unification algorithm
   implementation encapsulated into a monad.
 
