--- a/proto1.tex
+++ b/proto1.tex
@@ -311,7 +311,7 @@ should have a number of constructs representing different terms in \progLang{Pro
   Drop the ``would''s here.
 }
 
-Consider the language {in Listing~\ref{tab:closed-terms}}, which has been adopted from
+Consider the language in Listing~\ref{tab:closed-terms}, which has been adopted from
 \cite{prolog-lib}.
 
 \begin{code-list}
@@ -351,7 +351,7 @@ append :: [Term] -> [Term] -> [Term]
 \end{minted}
 
 \begin{comment}
-The \xxx{above} data type Figure~\ref{tab:closed-terms} is recursive as seen in the constructor,
+The  data type in Figure~\ref{tab:closed-terms} is recursive as seen in the constructor,
 \mint{haskell}|Struct Atom [Term]|
 \end{comment}
 
